# MatrixMarket

./: CMakeLists.txt
debug/: setup.sh
debug/unit/: realA.mtx  realB.mtx
mm/: CMakeLists.txt  mmio.c  mmio_unsign.h
unit/: CMakeLists.txt  example_read.c  example_write.c  mmUtilTest.cpp
